<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather S+</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="owner_home_click_login">点击登录</string>
    <string name="tv_about_us">V5.0</string>
    <string name="my_home_page">我的主页</string>
    <string name="widget_theme_store">皮肤小铺</string>
    <string name="weather_avatar">穿衣助手</string>
    <string name="recommend_app">发现App</string>
    <string name="appstore_selector_game">游戏</string>
    <string name="moji_mall">商城</string>
    <string name="msp_action_settings">设置</string>
    <string name="owner_share_account">分享账号</string>
    <string name="settings">设置</string>
    <string name="Setting_manual_clearCache">清除缓存</string>
    <string name="hot">专题</string>
    <string name="live_view">时景</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="double_dash">暂无</string>
    <string name="pollution_index">--</string>
    <string name="pollute_index">轻度污染</string>
    <string name="nothing" />
    <string name="publish_text">发布</string>
    <string name="feeltemp">体感温度</string>
    <string name="mp2_5">PM2.5:</string>
    <string name="today">今天</string>
    <string name="date_week">12月10日 周四</string>
    <string name="tomorrow">明天</string>
    <string name="houtian">后天</string>
    <string name="weather">天气</string>
    <string name="liveimage">实景</string>
    <string name="me">我</string>
    <string name="title_activity_tendency">TendencyActivity</string>

</resources>