<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/owner_white_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/owner_header_padding_bottom" >

    <LinearLayout
        android:id="@+id/ll_home_page"
        android:layout_width="fill_parent"
        android:layout_height="55.0dip"
        android:layout_marginTop="15.0dip"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/common_white_divider_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/owner_white_rl_click"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="37.0dip"
                android:layout_height="37.0dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16.0dip"
                android:background="@drawable/my_home_page" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15.0dip"
                android:text="@string/my_home_page"
                android:textColor="@color/owner_title"
                android:textSize="17.0dip" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/common_white_divider_line" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:scaleType="fitXY"
        android:src="@drawable/common_white_divider_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/common_white_divider_line" />

        <LinearLayout
            android:id="@+id/ll_owner_home_pager_dress"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:background="@drawable/owner_white_rl_click"
            android:clickable="true"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:id="@+id/bl_owner_home_pager_dress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clear"
                android:paddingRight="10.0dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16.0dip"
                        android:background="@drawable/owner_dress_helper" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15.0dip"
                        android:text="@string/weather_avatar"
                        android:textColor="@color/owner_title"
                        android:textSize="17.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_app_news"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/common_white_divider_line" />

        <LinearLayout
            android:id="@+id/ll_owner_home_pager_app"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:background="@drawable/owner_white_rl_click"
            android:clickable="true"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:id="@+id/bl_owner_home_pager_app"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clear"
                android:paddingRight="10.0dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16.0dip"
                        android:background="@drawable/owner_good_app" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15.0dip"
                        android:text="@string/recommend_app"
                        android:textColor="@color/owner_title"
                        android:textSize="17.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_owner_home_game_line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/common_white_divider_line" />

        <LinearLayout
            android:id="@+id/ll_owner_home_pager_game"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:background="@drawable/owner_white_rl_click"
            android:clickable="true"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:id="@+id/bl_owner_home_pager_game"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clear"
                android:paddingRight="10.0dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:id="@+id/iv_game_icon"
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16.0dip"
                        android:src="@drawable/owner_open_game" />

                    <TextView
                        android:id="@+id/tv_game_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15.0dip"
                        android:text="@string/appstore_selector_game"
                        android:textColor="@color/owner_title"
                        android:textSize="17.0dip" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true" >

                    <TextView
                        android:id="@+id/tv_game_des"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="16.0dip"
                        android:singleLine="true"
                        android:text="@string/recommend_app"
                        android:textColor="@color/common_half_alpha_black_text"
                        android:textSize="16.0dip" />

                    <ImageView
                        android:id="@+id/iv_game_pic"
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="6.0dip" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_owner_home_pager_widget"
                    android:layout_width="fill_parent"
                    android:layout_height="55.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/owner_white_rl_click"
                    android:clickable="true"
                    android:gravity="center_vertical" >

                    <ImageView
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16.0dip"
                        android:background="@drawable/owner_wiget" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15.0dip"
                        android:text="@string/widget_theme_store"
                        android:textColor="@color/owner_title"
                        android:textSize="17.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:scaleType="fitXY"
        android:src="@drawable/common_white_divider_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_owner_home_pager_share"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:background="@drawable/owner_white_rl_click"
            android:clickable="true"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:id="@+id/bl_owner_home_pager_share"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clear"
                android:paddingRight="10.0dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16.0dip"
                        android:background="@drawable/owner_good_share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15.0dip"
                        android:text="@string/owner_share_account"
                        android:textColor="@color/owner_title"
                        android:textSize="17.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/common_white_divider_line" />

        <LinearLayout
            android:id="@+id/ll_owner_home_pager_setting"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:background="@drawable/owner_white_rl_click"
            android:clickable="true"
            android:gravity="center_vertical" >

            <RelativeLayout
                android:id="@+id/bl_owner_home_pager_setting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clear"
                android:paddingRight="10.0dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" >

                    <ImageView
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16.0dip"
                        android:background="@drawable/owner_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15.0dip"
                        android:text="@string/settings"
                        android:textColor="@color/owner_title"
                        android:textSize="17.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/common_white_divider_line" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:scaleType="fitXY"
        android:src="@drawable/common_white_divider_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/ll_owner_home_pager_clear"
            android:layout_width="fill_parent"
            android:layout_height="55.0dip"
            android:background="@drawable/owner_white_rl_click"
            android:clickable="true"
            android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:paddingRight="10.0dip" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16.0dip" >

                    <ImageView
                        android:id="@+id/iv_background"
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:background="@drawable/clear_memory_bg" />

                    <LinearLayout
                        android:id="@+id/wave_view"
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:background="@color/white"
                        android:orientation="horizontal" />

                    <ImageView
                        android:id="@+id/iv_circle"
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:background="@drawable/clear_memory_circle" />

                    <ImageView
                        android:layout_width="37.0dip"
                        android:layout_height="37.0dip"
                        android:background="@drawable/clear_wave_bg_selector" />

                    <TextView
                        android:id="@+id/tv_memory_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="0%"
                        android:textColor="@color/owner_title"
                        android:textSize="13.0dip" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_clear_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15.0dip"
                    android:text="@string/Setting_manual_clearCache"
                    android:textColor="@color/owner_title"
                    android:textSize="17.0dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15.0dip"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tv_memory_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@color/clear_memory_size"
                    android:textSize="13.0dip" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/common_white_divider_line" />

</LinearLayout>